<resources>
    <string name="app_name">BPCorrect</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Pre SignIn screeen-->
    <string name="get_a_pay">Get a POSfone number for your work calls and take payments from anywhere.</string>
    <string name="start_free_trial">START YOUR FREE TRAIL</string>
    <string name="already_have">Already have POSfone number?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="terms_of_use"> Terms of Use   -  </string>
    <string name="privacy_policy">  -  Privacy </string>

    <!--Sign In Screen-->
    <string name="activate_link_text">An activation link has been delivered to your registered email.Activate your account before login.</string>
    <string name="hint_name">Username</string>
    <string name="hint_password">Create Password</string>
    <string name="enter_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="dont_have">Sign Up</string>

    <!--Contact screen-->
    <string name="search_contact">Search contacts</string>


    <!--Sign Up screen-->
    <string name="first_name">First Name*</string>
    <string name="create_account">Create an account</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="company_country">Country*</string>
    <string name="state">County/State</string>
    <string name="save_and_next">SAVE AND NEXT</string>
    <string name="register">REGISTER</string>

    <string name="indicator_start_receive">Start receiving</string>
    <string name="indicator_complete_receive">Complete receiving</string>
    <string name="indicator_during_receive">During receiving</string>


    <string name="bp_normal">Your blood pressure falls within the normal range.</string>
    <string name="bp_elevated">According to the American Heart Association (https://www.heart.org/en/health-topics/high-blood-pressure/understanding-blood-pressure-readings), you have elevated blood pressure. People with elevated blood pressure are likely to develop high blood pressure unless steps are taken to control the blood pressure.</string>
    <string name="bp_hypertension_stage_1">According to the American Heart Association (https://www.heart.org/en/health-topics/high-blood-pressure/understanding-blood-pressure-readings), you have Hypertension Stage 1. At this stage of high blood pressure, doctors are likely to prescribe lifestyle changes and may consider adding blood pressure medication based on your risk of atherosclerotic cardiovascular disease (ASCVD), such as heart attack or stroke.</string>
    <string name="bp_hypertension_stage_2">According to the American Heart Association (https://www.heart.org/en/health-topics/high-blood-pressure/understanding-blood-pressure-readings), you have Hypertension Stage 2. At this stage of high blood pressure, doctors are likely to prescribe a combination of blood pressure medications and lifestyle changes.</string>
    <string name="bp_hypertension_crisis">If you are experiencing signs of possible organ damage such as chest pain, shortness of breath, back pain, numbness/weakness, change in vision, difficulty speaking, do not wait to see if your pressure comes down on its own. Call 9-1-1.</string>


    <string name="bulleted_list">
        \n<li> Don’t smoke, exercise, or drink caffeine or alcohol 30 min prior to measurement</li>\n\n
        <li>Left arm resting comfortably at heart level</li>\n\n
        <li>Don’t talk</li>\n\n
        <li>Sit still in a chair with back supported, legs uncrossed</li>\n\n
        <li>Cuff positioning (bottom of cuff above the bend of elbow)</li>\n\n
        <li>Cuff sizing instructions</li>\n\n
    </string>

    <string name="step1">Make sure it has been 30 minutes since you\'ve exercised, smoked, or had any caffeine or alcohol.</string>
    <string name="step2">Empty your bladder.</string>
    <string name="step3">Rest in a chair with your back supported.</string>
    <string name="step4">Place the bottom of the cuff just above the bend of your bare elbow.</string>
    <string name="step5">Rest your arm on a flat surface like a table or armrest so that the cuff is at the level of your heart.</string>
    <string name="step6">Relax. Don\'t talk. Make sure your legs are uncrossed with feet flat on the floor.</string>

    <string name="reminder_info_tv">Relax. Don\'t talk. Make sure your legs are \n uncrossed with feet flat on the floor.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="a_and_d">A&amp;D Medical</string>
    <string name="accept_terms">I have read the terms and conditions.</string>
    <string name="password_instruction">Password must contain at least one Uppercase letter and one Lowercase letter, at least one number, one special character                      and be longer than eight charaters.</string>

</resources>
