<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/bp_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/bp_gray">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_back"
            android:layout_margin="10dp"
            android:tint="#000000"
            android:padding="10dp"
            />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:src="@mipmap/logo"
            android:layout_margin="30dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:padding="@dimen/dimen_50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:gravity="center|center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.protechgene.android.bpconnect.Utils.TitilliumWebEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/login_usename"
                android:hint="Email"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/input_text_size" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_buttons_sign_in"
            app:passwordToggleDrawable="@drawable/password_see"
            app:passwordToggleEnabled="true">

            <com.protechgene.android.bpconnect.Utils.TitilliumWebEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/input_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_buttons_sign_in"
            app:passwordToggleDrawable="@drawable/password_see"
            app:passwordToggleEnabled="true">

            <com.protechgene.android.bpconnect.Utils.TitilliumWebEditText
                android:id="@+id/edit_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/hint_password_confirm"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/input_text_size" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textColor="@color/error_red"
            android:id="@+id/password_instruction"
            android:visibility="gone"
            android:text="@string/password_instruction"
            android:layout_gravity="start"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms_and_condition"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/accept_terms"
            android:layout_gravity="start"
            />


        <com.protechgene.android.bpconnect.Utils.TitilliumWebTextView
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_bg_textview"
            android:gravity="center"
            android:padding="@dimen/sign_in_button_padding"
            android:text="SIGN UP"
            android:textColor="#ffffff"
            android:textSize="@dimen/get_a_pay_text_size" />

    </LinearLayout>

    <com.protechgene.android.bpconnect.Utils.TitilliumWebTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/terms_and_privacy_link"
        android:text="@string/terms_of_use"
        android:gravity="center"
        android:textSize="@dimen/terms_of_use_text_size"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>