<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.protechgene.android.bpconnect.Utils.TitilliumWebBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PROPER BLOOD PRESSURE MEASURING INSTRUCTIONS"
        android:textAlignment="center"
        android:textColor="#171717"
        android:padding="10dp"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c8c8c8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="14sp"
                android:src="@drawable/ic_checked"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step1"
                android:textColor="#858585"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="14sp"
                android:src="@drawable/ic_checked"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                android:textColor="#858585"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="14sp"
                android:src="@drawable/ic_checked"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                android:textColor="#858585"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="14sp"
                android:src="@drawable/ic_checked"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step4"
                android:textColor="#858585"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="14sp"
                android:src="@drawable/ic_checked"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                android:textColor="#858585"
                android:layout_weight="0.1"/>

        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="#c8c8c8"/>

    <com.protechgene.android.bpconnect.Utils.TitilliumWebBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"
        android:gravity="center"
        android:id="@+id/dailog_ok_button"
        android:textSize="14sp"
        android:textColor="#017cef"
        android:padding="10dp"
        android:background="@android:color/white"/>

</LinearLayout>
